--- a/android_vendor_itinerary/app/build.gradle
+++ b/android_vendor_itinerary/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation files('C:\\Program Files\\Zebra Technologies\\link_os_sdk\\android\\v2.8.2148\\lib\\ZSDK_ANDROID_API.jar')
+    implementation files('lib\\ZSDK_ANDROID_API.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
