--- a/android_vendor_itinerary/local.properties
+++ b/android_vendor_itinerary/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 23 10:04:29 IST 2021
-sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
+#Mon Sep 27 20:57:06 COT 2021
+sdk.dir=C\:\\Users\\samue\\AppData\\Local\\Android\\Sdk
