--- a/android_vendor_itinerary/local.properties
+++ b/android_vendor_itinerary/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Feb 03 10:48:36 IST 2022
-sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\samue\\AppData\\Local\\Android\\Sdk
